Lineage chart UI fixes: 1. Displaying the chart at the centre of the panel. 2. Modified fonts 3. Node details slider is fixed to the height of the panel, any overflowing text would require the slider-content to scroll.

--- a/dp-web/src/app/modules/assets/asset-view/node-details/node-details.component.scss
+++ b/dp-web/src/app/modules/assets/asset-view/node-details/node-details.component.scss
@@ -16,6 +16,9 @@
 }
 .details-container{
   padding: 25px 25px;
+  height: 500px;
+  box-sizing: border-box;
+  overflow-y: auto;
 }
 .overflow-ellipsis {
   text-overflow: ellipsis;
@@ -57,3 +60,7 @@
   text-align: left
 }
 
+:host /deep/ .load-right-to-left-slider {
+  bottom: -25px;
+  top: 0;
+}
